return book and small fixes